# personal-rag

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  GETTING-STARTED.md  GOOGLE-OAUTH.md  HIGH-LEVEL-PLAN.md  PLAN-REMAINDER.md  README.md  api.py  app.py  daemon.py  daemon_cli.py  daemon_web.py  ingest.py  pyproject.toml  pytest.ini  query.py
.streamlit/: config.toml
docs/: DAEMON.md
docs/plans/: 2025-10-31-background-daemon-design.md  2025-10-31-background-daemon-implementation.md  2025-11-01-multi-source-daemon-design.md  2025-11-01-multi-source-daemon-implementation.md
src/: __init__.py  chunking.py  config.py  embeddings.py  ingestion.py  models.py  retrieval.py
src/connectors/: __init__.py  base.py  gdrive.py  local.py
src/daemon/: __init__.py  conditions.py  models.py  notifications.py  oauth.py  runner.py  scheduler.py  state.py
templates/: dashboard.html
tests/: README.md  __init__.py  conftest.py  test_daemon.py  test_daemon_cli.py  test_daemon_scheduler.py
tests/fixtures/: test_doc1.txt  test_doc2.md
tests/integration/: test_ingestion.py
tests/unit/: test_chunking.py  test_embeddings.py  test_ingestion.py  test_models.py
tests/unit/connectors/: test_gdrive.py  test_local.py
tests/unit/daemon/: test_daemon_conditions.py  test_daemon_models.py  test_daemon_notifications.py  test_daemon_runner.py  test_daemon_scheduler.py  test_daemon_state.py  test_oauth.py
